[metadata]
name = bluetti_mqtt
version = feature/add_AC200L_powerstation
url = https://github.com/scfct/bluetti_mqtt.git
author = Stephen Augenstein
author_email = perl.programmer@gmail.com
description = MQTT interface to Bluetti power stations
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
zip_safe = false
install_requires = [
    asyncio-mqtt,
    bleak,
    crcmod,
    'paho-mqtt==1.6.1'
]

[options.entry_points]
console_scripts =
    bluetti-discovery = bluetti_mqtt.discovery_cli:main
    bluetti-logger = bluetti_mqtt.logger_cli:main
    bluetti-mqtt = bluetti_mqtt.server_cli:main
